contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdfview.h: 415
FPDF_LoadMemDocument = _libs['pdfium']['FPDF_LoadMemDocument']
FPDF_LoadMemDocument.argtypes = (POINTER(None), c_int, FPDF_BYTESTRING)
FPDF_LoadMemDocument.restype = FPDF_DOCUMENT

# ./fpdfview.h: 440
FPDF_LoadMemDocument64 = _libs['pdfium']['FPDF_LoadMemDocument64']
FPDF_LoadMemDocument64.argtypes = (POINTER(None), c_size_t, FPDF_BYTESTRING)
FPDF_LoadMemDocument64.restype = FPDF_DOCUMENT

# ./fpdfview.h: 464
class struct_anon_4 (Structure):
    __slots__ = ('m_FileLen', 'm_GetBlock', 'm_Param')

struct_anon_4._fields_ = (
    ('m_FileLen', c_ulong),
    ('m_GetBlock', CFUNCTYPE(UNCHECKED(c_int), POINTER(None), c_ulong, POINTER(c_ubyte), c_ulong)),
    ('m_Param', POINTER(None)),
)

# ./fpdfview.h: 464
FPDF_FILEACCESS = struct_anon_4

# ./fpdfview.h: 544
class struct_FPDF_FILEHANDLER_ (Structure):
    __slots__ = ('clientData', 'Release', 'GetSize', 'ReadBlock', 'WriteBlock', 'Flush', 'Truncate')

struct_FPDF_FILEHANDLER_._fields_ = (
    ('clientData', POINTER(None)),
    ('Release', CFUNCTYPE(UNCHECKED(None), POINTER(None))),
    ('GetSize', CFUNCTYPE(UNCHECKED(FPDF_DWORD), POINTER(None))),
    ('ReadBlock', CFUNCTYPE(UNCHECKED(FPDF_RESULT), POINTER(None), FPDF_DWORD, POINTER(None), FPDF_DWORD)),
    ('WriteBlock', CFUNCTYPE(UNCHECKED(FPDF_RESULT), POINTER(None), FPDF_DWORD, POINTER(None), FPDF_DWORD)),
    ('Flush', CFUNCTYPE(UNCHECKED(FPDF_RESULT), POINTER(None))),
    ('Truncate', CFUNCTYPE(UNCHECKED(FPDF_RESULT), POINTER(None), FPDF_DWORD)),
)

# ./fpdfview.h: 544
FPDF_FILEHANDLER = struct_FPDF_FILEHANDLER_

# ./fpdfview.h: 567
FPDF_LoadCustomDocument = _libs['pdfium']['FPDF_LoadCustomDocument']
FPDF_LoadCustomDocument.argtypes = (POINTER(FPDF_FILEACCESS), FPDF_BYTESTRING)
FPDF_LoadCustomDocument.restype = FPDF_DOCUMENT

# ./fpdfview.h: 580
FPDF_GetFileVersion = _libs['pdfium']['FPDF_GetFileVersion']
FPDF_GetFileVersion.argtypes = (FPDF_DOCUMENT, POINTER(c_int))
FPDF_GetFileVersion.restype = FPDF_BOOL

# ./fpdfview.h: 605
FPDF_GetLastError = _libs['pdfium']['FPDF_GetLastError']
FPDF_GetLastError.argtypes = ()
FPDF_GetLastError.restype = c_ulong

# ./fpdfview.h: 620
FPDF_DocumentHasValidCrossReferenceTable = _libs['pdfium']['FPDF_DocumentHasValidCrossReferenceTable']
FPDF_DocumentHasValidCrossReferenceTable.argtypes = (FPDF_DOCUMENT, )
FPDF_DocumentHasValidCrossReferenceTable.restype = FPDF_BOOL

# ./fpdfview.h: 637
FPDF_GetTrailerEnds = _libs['pdfium']['FPDF_GetTrailerEnds']
FPDF_GetTrailerEnds.argtypes = (FPDF_DOCUMENT, POINTER(c_uint), c_ulong)
FPDF_GetTrailerEnds.restype = c_ulong

# ./fpdfview.h: 650
FPDF_GetDocPermissions = _libs['pdfium']['FPDF_GetDocPermissions']
FPDF_GetDocPermissions.argtypes = (FPDF_DOCUMENT, )
FPDF_GetDocPermissions.restype = c_ulong

# ./fpdfview.h: 662
FPDF_GetDocUserPermissions = _libs['pdfium']['FPDF_GetDocUserPermissions']
FPDF_GetDocUserPermissions.argtypes = (FPDF_DOCUMENT, )
FPDF_GetDocUserPermissions.restype = c_ulong

# ./fpdfview.h: 673
FPDF_GetSecurityHandlerRevision = _libs['pdfium']['FPDF_GetSecurityHandlerRevision']
FPDF_GetSecurityHandlerRevision.argtypes = (FPDF_DOCUMENT, )
FPDF_GetSecurityHandlerRevision.restype = c_int

# ./fpdfview.h: 681
FPDF_GetPageCount = _libs['pdfium']['FPDF_GetPageCount']
FPDF_GetPageCount.argtypes = (FPDF_DOCUMENT, )
FPDF_GetPageCount.restype = c_int

# ./fpdfview.h: 693
FPDF_LoadPage = _libs['pdfium']['FPDF_LoadPage']
FPDF_LoadPage.argtypes = (FPDF_DOCUMENT, c_int)
FPDF_LoadPage.restype = FPDF_PAGE

# ./fpdfview.h: 706
FPDF_GetPageWidthF = _libs['pdfium']['FPDF_GetPageWidthF']
FPDF_GetPageWidthF.argtypes = (FPDF_PAGE, )
FPDF_GetPageWidthF.restype = c_float

# ./fpdfview.h: 720
FPDF_GetPageWidth = _libs['pdfium']['FPDF_GetPageWidth']
FPDF_GetPageWidth.argtypes = (FPDF_PAGE, )
FPDF_GetPageWidth.restype = c_double

# ./fpdfview.h: 732
FPDF_GetPageHeightF = _libs['pdfium']['FPDF_GetPageHeightF']
FPDF_GetPageHeightF.argtypes = (FPDF_PAGE, )
FPDF_GetPageHeightF.restype = c_float

# ./fpdfview.h: 746
FPDF_GetPageHeight = _libs['pdfium']['FPDF_GetPageHeight']
FPDF_GetPageHeight.argtypes = (FPDF_PAGE, )
FPDF_GetPageHeight.restype = c_double

# ./fpdfview.h: 758
FPDF_GetPageBoundingBox = _libs['pdfium']['FPDF_GetPageBoundingBox']
FPDF_GetPageBoundingBox.argtypes = (FPDF_PAGE, POINTER(FS_RECTF))
FPDF_GetPageBoundingBox.restype = FPDF_BOOL

# ./fpdfview.h: 772
FPDF_GetPageSizeByIndexF = _libs['pdfium']['FPDF_GetPageSizeByIndexF']
FPDF_GetPageSizeByIndexF.argtypes = (FPDF_DOCUMENT, c_int, POINTER(FS_SIZEF))
FPDF_GetPageSizeByIndexF.restype = FPDF_BOOL

# ./fpdfview.h: 790
FPDF_GetPageSizeByIndex = _libs['pdfium']['FPDF_GetPageSizeByIndex']
FPDF_GetPageSizeByIndex.argtypes = (FPDF_DOCUMENT, c_int, POINTER(c_double), POINTER(c_double))
FPDF_GetPageSizeByIndex.restype = c_int

# ./fpdfview.h: 824
class struct_FPDF_COLORSCHEME_ (Structure):
    __slots__ = ('path_fill_color', 'path_stroke_color', 'text_fill_color', 'text_stroke_color')

struct_FPDF_COLORSCHEME_._fields_ = (
    ('path_fill_color', FPDF_DWORD),
    ('path_stroke_color', FPDF_DWORD),
    ('text_fill_color', FPDF_DWORD),
    ('text_stroke_color', FPDF_DWORD),
)

# ./fpdfview.h: 824
FPDF_COLORSCHEME = struct_FPDF_COLORSCHEME_

# ./fpdfview.h: 899
FPDF_RenderPageBitmap = _libs['pdfium']['FPDF_RenderPageBitmap']
FPDF_RenderPageBitmap.argtypes = (FPDF_BITMAP, FPDF_PAGE, c_int, c_int, c_int, c_int, c_int, c_int)
FPDF_RenderPageBitmap.restype = None

# ./fpdfview.h: 927
FPDF_RenderPageBitmapWithMatrix = _libs['pdfium']['FPDF_RenderPageBitmapWithMatrix']
FPDF_RenderPageBitmapWithMatrix.argtypes = (FPDF_BITMAP, FPDF_PAGE, POINTER(FS_MATRIX), POINTER(FS_RECTF), c_int)
FPDF_RenderPageBitmapWithMatrix.restype = None

# ./fpdfview.h: 956
FPDF_ClosePage = _libs['pdfium']['FPDF_ClosePage']
FPDF_ClosePage.argtypes = (FPDF_PAGE, )
FPDF_ClosePage.restype = None

# ./fpdfview.h: 964
FPDF_CloseDocument = _libs['pdfium']['FPDF_CloseDocument']
FPDF_CloseDocument.argtypes = (FPDF_DOCUMENT, )
FPDF_CloseDocument.restype = None

# ./fpdfview.h: 1007
FPDF_DeviceToPage = _libs['pdfium']['FPDF_DeviceToPage']
FPDF_DeviceToPage.argtypes = (FPDF_PAGE, c_int, c_int, c_int, c_int, c_int, c_int, c_int, POINTER(c_double), POINTER(c_double))
FPDF_DeviceToPage.restype = FPDF_BOOL

# ./fpdfview.h: 1044
FPDF_PageToDevice = _libs['pdfium']['FPDF_PageToDevice']
FPDF_PageToDevice.argtypes = (FPDF_PAGE, c_int, c_int, c_int, c_int, c_int, c_double, c_double, POINTER(c_int), POINTER(c_int))
FPDF_PageToDevice.restype = FPDF_BOOL

# ./fpdfview.h: 1085
FPDFBitmap_Create = _libs['pdfium']['FPDFBitmap_Create']
FPDFBitmap_Create.argtypes = (c_int, c_int, c_int)
FPDFBitmap_Create.restype = FPDF_BITMAP

# ./fpdfview.h: 1141
FPDFBitmap_CreateEx = _libs['pdfium']['FPDFBitmap_CreateEx']
FPDFBitmap_CreateEx.argtypes = (c_int, c_int, c_int, POINTER(None), c_int)
FPDFBitmap_CreateEx.restype = FPDF_BITMAP

# ./fpdfview.h: 1157
FPDFBitmap_GetFormat = _libs['pdfium']['FPDFBitmap_GetFormat']
FPDFBitmap_GetFormat.argtypes = (FPDF_BITMAP, )
FPDFBitmap_GetFormat.restype = c_int

# ./fpdfview.h: 1183
FPDFBitmap_FillRect = _libs['pdfium']['FPDFBitmap_FillRect']
FPDFBitmap_FillRect.argtypes = (FPDF_BITMAP, c_int, c_int, c_int, c_int, FPDF_DWORD)
FPDFBitmap_FillRect.restype = FPDF_BOOL

# ./fpdfview.h: 1205
FPDFBitmap_GetBuffer = _libs['pdfium']['FPDFBitmap_GetBuffer']
FPDFBitmap_GetBuffer.argtypes = (FPDF_BITMAP, )
FPDFBitmap_GetBuffer.restype = POINTER(None)

# ./fpdfview.h: 1214
FPDFBitmap_GetWidth = _libs['pdfium']['FPDFBitmap_GetWidth']
FPDFBitmap_GetWidth.argtypes = (FPDF_BITMAP, )
FPDFBitmap_GetWidth.restype = c_int

# ./fpdfview.h: 1223
FPDFBitmap_GetHeight = _libs['pdfium']['FPDFBitmap_GetHeight']
FPDFBitmap_GetHeight.argtypes = (FPDF_BITMAP, )
FPDFBitmap_GetHeight.restype = c_int

# ./fpdfview.h: 1234
FPDFBitmap_GetStride = _libs['pdfium']['FPDFBitmap_GetStride']
FPDFBitmap_GetStride.argtypes = (FPDF_BITMAP, )
FPDFBitmap_GetStride.restype = c_int

# ./fpdfview.h: 1246
FPDFBitmap_Destroy = _libs['pdfium']['FPDFBitmap_Destroy']
FPDFBitmap_Destroy.argtypes = (FPDF_BITMAP, )
FPDFBitmap_Destroy.restype = None

# ./fpdfview.h: 1255
FPDF_VIEWERREF_GetPrintScaling = _libs['pdfium']['FPDF_VIEWERREF_GetPrintScaling']
FPDF_VIEWERREF_GetPrintScaling.argtypes = (FPDF_DOCUMENT, )
FPDF_VIEWERREF_GetPrintScaling.restype = FPDF_BOOL

# ./fpdfview.h: 1264
FPDF_VIEWERREF_GetNumCopies = _libs['pdfium']['FPDF_VIEWERREF_GetNumCopies']
FPDF_VIEWERREF_GetNumCopies.argtypes = (FPDF_DOCUMENT, )
FPDF_VIEWERREF_GetNumCopies.restype = c_int

# ./fpdfview.h: 1273
FPDF_VIEWERREF_GetPrintPageRange = _libs['pdfium']['FPDF_VIEWERREF_GetPrintPageRange']
FPDF_VIEWERREF_GetPrintPageRange.argtypes = (FPDF_DOCUMENT, )
FPDF_VIEWERREF_GetPrintPageRange.restype = FPDF_PAGERANGE

# ./fpdfview.h: 1283
FPDF_VIEWERREF_GetPrintPageRangeCount = _libs['pdfium']['FPDF_VIEWERREF_GetPrintPageRangeCount']
FPDF_VIEWERREF_GetPrintPageRangeCount.argtypes = (FPDF_PAGERANGE, )
FPDF_VIEWERREF_GetPrintPageRangeCount.restype = c_size_t

# ./fpdfview.h: 1295
FPDF_VIEWERREF_GetPrintPageRangeElement = _libs['pdfium']['FPDF_VIEWERREF_GetPrintPageRangeElement']
FPDF_VIEWERREF_GetPrintPageRangeElement.argtypes = (FPDF_PAGERANGE, c_size_t)
FPDF_VIEWERREF_GetPrintPageRangeElement.restype = c_int

# ./fpdfview.h: 1305
FPDF_VIEWERREF_GetDuplex = _libs['pdfium']['FPDF_VIEWERREF_GetDuplex']
FPDF_VIEWERREF_GetDuplex.argtypes = (FPDF_DOCUMENT, )
FPDF_VIEWERREF_GetDuplex.restype = FPDF_DUPLEXTYPE

# ./fpdfview.h: 1323
FPDF_VIEWERREF_GetName = _libs['pdfium']['FPDF_VIEWERREF_GetName']
FPDF_VIEWERREF_GetName.argtypes = (FPDF_DOCUMENT, FPDF_BYTESTRING, POINTER(c_char), c_ulong)
FPDF_VIEWERREF_GetName.restype = c_ulong

# ./fpdfview.h: 1335
FPDF_CountNamedDests = _libs['pdfium']['FPDF_CountNamedDests']
FPDF_CountNamedDests.argtypes = (FPDF_DOCUMENT, )
FPDF_CountNamedDests.restype = FPDF_DWORD

# ./fpdfview.h: 1345
FPDF_GetNamedDestByName = _libs['pdfium']['FPDF_GetNamedDestByName']
FPDF_GetNamedDestByName.argtypes = (FPDF_DOCUMENT, FPDF_BYTESTRING)
FPDF_GetNamedDestByName.restype = FPDF_DEST

# ./fpdfview.h: 1368
FPDF_GetNamedDest = _libs['pdfium']['FPDF_GetNamedDest']
FPDF_GetNamedDest.argtypes = (FPDF_DOCUMENT, c_int, POINTER(None), POINTER(c_long))
FPDF_GetNamedDest.restype = FPDF_DEST

# ./fpdfview.h: 1380
FPDF_GetXFAPacketCount = _libs['pdfium']['FPDF_GetXFAPacketCount']
FPDF_GetXFAPacketCount.argtypes = (FPDF_DOCUMENT, )
FPDF_GetXFAPacketCount.restype = c_int

# ./fpdfview.h: 1398
FPDF_GetXFAPacketName = _libs['pdfium']['FPDF_GetXFAPacketName']
FPDF_GetXFAPacketName.argtypes = (FPDF_DOCUMENT, c_int, POINTER(None), c_ulong)
FPDF_GetXFAPacketName.restype = c_ulong

# ./fpdfview.h: 1425
FPDF_GetXFAPacketContent = _libs['pdfium']['FPDF_GetXFAPacketContent']
FPDF_GetXFAPacketContent.argtypes = (FPDF_DOCUMENT, c_int, POINTER(None), c_ulong, POINTER(c_ulong))
FPDF_GetXFAPacketContent.restype = FPDF_BOOL

# ./fpdf_formfill.h: 26
class struct__IPDF_JsPlatform (Structure):
    __slots__ = ('version', 'app_alert', 'app_beep', 'app_response', 'Doc_getFilePath', 'Doc_mail', 'Doc_print', 'Doc_submitForm', 'Doc_gotoPage', 'Field_browse', 'm_pFormfillinfo', 'm_isolate', 'm_v8EmbedderSlot')
